<resources>
    <string name="app_name">Lattice Innovations</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="continue_txt">Continue</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="dob">DOB</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="pincode">Pincode</string>
    <string name="district">District</string>
    <string name="state">State</string>
    <string name="register">Register</string>
    <string name="check">Check</string>
    <string name="city">City</string>
    <string name="show_results">Show Results</string>
    <string name="my_profile">My Profile</string>
    <string name="log_out">Log out</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>