<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LandingScreen">
<!--    data binding variable initialize-->

    <data>
        <variable
            name="landingScreen"
            type="shyam.gunsariya.latticeinnvoations.fragment.LandingScreen" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/logo_lattice"
            android:contentDescription="@string/app_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mobile_edt_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="50dp"
            android:hint="@string/mobile_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobileNumEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="10"
                android:drawableStart="@drawable/ic_phone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mobile_edt_layout"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="50dp"
            android:onClick="@{()-> landingScreen.goToRegister()}"
            android:textAllCaps="false"
            android:text="@string/continue_txt"
            android:textColor="@color/white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>




</layout>