<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegistrationForm">

    <data>
        <variable
            name="viewModel"
            type="shyam.gunsariya.latticeinnvoations.viewModel.UserViewModel" />
        <variable
            name="registerUser"
            type="shyam.gunsariya.latticeinnvoations.fragment.RegistrationForm" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mobile_edt_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_number"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:text="@{viewModel.mobile_number.toString()}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/full_name_edt_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mobile_edt_layout">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fullNameEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/genderEdt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingStart="10dp"
                    android:entries="@array/gender"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:paddingBottom="10dp"
                    android:background="#E3E0E0"
                    app:layout_constraintStart_toStartOf="@id/full_name_edt_layout"
                    app:layout_constraintEnd_toEndOf="@id/full_name_edt_layout"
                    app:layout_constraintTop_toBottomOf="@id/full_name_edt_layout"
                    android:inputType="text"
                    tools:ignore="RtlSymmetry" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dob_edt_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dob"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/genderEdt">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dobEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_calender"
                    android:focusable="false"
                    android:onClick="@{()-> registerUser.dobPick()}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address_line1_edt_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_line_1"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dob_edt_layout">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addressLine1Edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:maxLength="50"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address_line2_edt_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_line_2"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_line1_edt_layout">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addressLine2Edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:maxLength="50"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pincode_edt_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pincode"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_line2_edt_layout">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pincodeEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:maxLength="6"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/district_edt_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/district"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pincode_edt_layout">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/districtEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:maxLength="50"
                    android:focusable="false"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/state_edt_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/state"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/district_edt_layout">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/stateEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:focusable="false"
                    android:maxLength="50"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/state_edt_layout"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                android:onClick="@{()-> registerUser.registerUser()}"
                android:textAllCaps="false"
                android:text="@string/register"
                android:textColor="@color/white"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>