<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".WeatherInfo">

    <data>
        <variable
            name="viewModel"
            type="shyam.gunsariya.latticeinnvoations.viewModel.UserViewModel" />
        <variable
            name="weatherFragment"
            type="shyam.gunsariya.latticeinnvoations.fragment.WeatherInfo" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/pin_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"
            android:weightSum="3"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/pincode">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pincodeEdt"
                    android:maxLength="6"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/pin_check_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:onClick="@{()-> weatherFragment.getDataUsingPincode()}"
                android:text="@string/check"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/stateEdt_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pin_check"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/state">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/stateEdt"
                android:layout_width="match_parent"
                android:focusable="false"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cityEdt_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stateEdt_layout"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/city">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cityEdt"
                android:layout_width="match_parent"
                android:focusable="false"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/show_result_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:onClick="@{()-> weatherFragment.getWeatherResult()}"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/cityEdt_layout"
            android:text="@string/show_results"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/show_result_btn"
            android:orientation="vertical">

            <TextView
                android:id="@+id/temp_centigrade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/temp_fahrenheit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/longitudeTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/latitudeTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>